refactored code, alignment remaining to fix

--- a/src/scss/hidden.scss
+++ b/src/scss/hidden.scss
@@ -4,6 +4,8 @@
   padding-left: 25px;
   padding-right: 20px;
   font-size: 17px;
+  padding-top: 17px;
+  padding-bottom: 18px;
   color: black;
   background-color: $display-content-area-header-color;
 }
