--- a/src/scss/smallAlignments.scss
+++ b/src/scss/smallAlignments.scss
@@ -1,23 +1,19 @@
-@media (min-width: 200) and (min-width: 1024.9px) {
-  // .DOMChangedHiddenSide {
-  //   transition: 0.3s all;
-  //   width: 70%;
-  //   transform: translate(0%,0);
-  // }
+@media (min-width: 200) {
 }
 
 .DOMChangedHiddenSide {
   width: 30%;
   transition: 0.3s all !important;
-  background-color: white;
-  position: relative;
-  transform: translate(0%,0);
+  background-color: white !important;
+  position: relative !important;
+  transform: translate(0%, 0);
 }
 
 .rightSlider__child__open {
   position: absolute;
   width: 100%;
   height: 100vh;
+  background-color: white !important;
 }
 
 .col-xl-3-5,
